# Changelog

## 0.2.1 (unreleased)

* changed default holiday tag to @holiday
* holiday tag can be configured in settings

## 0.2.0 (2023-04-14)

* future activities will not end the current activity anymore
* holidays can be added with @_holiday tag
* holidays do not require work hours and don't count towards the work hours of the day

## 0.1.2 (2023-03-29)

* calling timeturner with no arguments will now print help
* adding new activities will end the current activity
* when adding a new activity that starts before the current activity, the current activity will be ended
* when adding a new activity that is contained by the current activity, the current activity will be split into two activities

## 0.1.1 (2023-03-27)

* fix: create home directory of database file if it does not exist

## 0.1.0 (2023-03-26)

* initial release