@@ -4,6 +4,7 @@
 
 * changed default holiday tag to @holiday
 * holiday tag can be configured in settings
+* Segement Range definition changed, end is now exclusive
 
 ## 0.2.0 (2023-04-14)
 
